--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "lucide-react": "^0.378.0",
-    "@google/genai": "^0.1.2"
+    "@google/genai": "latest"
   },
   "devDependencies": {
     "@types/react": "^18.3.2",
