--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "lucide-react": "^0.378.0",
-    "@google/genai": "*"
+    "@google/genai": "*",
+    "peerjs": "^1.5.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.2",
